[package]
name = "fabrik"
version = "0.1.0"
authors = ["Saša Savić <sasa@savic.one>"]
license = "MIT"
edition = "2018"
readme = "README.md"
description = "Implementation of FABRIK (Forward And Backward Reaching Inverse Kinematics) IK algorithm."
keywords = ["fabrik","inverse","kinematics", "2d", "3d"]
repository = "https://github.com/saleone/fabrik.git"
homepage = "https://github.com/saleone/fabrik"

[dependencies]
cgmath = "0.17.0"
